--- a/lib/Resources/public/css/handler.css
+++ b/lib/Resources/public/css/handler.css
@@ -1,6 +1,5 @@
-.trigger-handler                                                { margin: 3em auto; }
 .trigger-handler > div                                          { display: none; }
-.trigger-handler > div > *                                      { display: inline-block; vertical-align: middle; }
+.trigger-handler .loading p *                                   { display: inline-block; vertical-align: middle; }
 .trigger-handler .spinner                                       { height: 2em; width: 2em; }
 .trigger-handler .msg                                           { vertical-align: middle; padding-left: 1em }
 
